@@ -1,3 +1,5 @@
+2005/12/2 -- released version 20051202_trunk
+
 2005/12/1 -- released version 20051201_trunk
 
 2005/11/30 -- released version 20051130_trunk
